Use correct project capability for test projects
This was flagged in https://github.com/microsoft/VSProjectSystem/issues/328, and
further investigation indicates the capability should be `TestContainer` rather
than `UnitTestContainer`.

--- a/eng/targets/Imports.targets
+++ b/eng/targets/Imports.targets
@@ -39,9 +39,9 @@
     <BypassFrameworkInstallChecks>true</BypassFrameworkInstallChecks>
   </PropertyGroup>
 
-  <!-- Add the UnitTestContainer project capability -->
+  <!-- Add the TestContainer project capability -->
   <ItemGroup Condition="'$(IsTestProject)' == 'true'">
-    <ProjectCapability Include="UnitTestContainer" />
+    <ProjectCapability Include="TestContainer" />
   </ItemGroup>
 
   <!-- 
